# dni23d2

./: .env  DEPLOYMENT_GUIDE.md  FRONTEND_BACKEND_INTEGRATION.md  README.md  SECURITY.md  deployment.json  hardhat.config.js  mock-token-addresses.json  package-lock.json  package.json  tsconfig.json
.next/: BUILD_ID  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  trace
backend/: package-lock.json  package.json  server.js
cache/: console-history.txt  solidity-files-cache.json
contracts/: AtomicSwap.sol  BatchBridge.sol  DarkPoolDEX.sol  MockERC20.sol
deployments/: constellation-testnet.json  hardhat.json  localhost.json
docs/: Technical-DAG-Guidebook.md  constellation-integration-complete.md  constellation-integration.md  contract-interfaces.md  cost-optimization-analysis.md  implementation-guide.md
icp-backend/: Cargo.toml  DEPLOYMENT_SUMMARY.md  README.md  deploy.sh  dfx.json  quick_test.sh
icp-backend/candid/: dark_pool_backend.did
icp-backend/src/dark_pool_backend/: lib.rs
pages/: _app.tsx  index.tsx
project views/: Ranks.txt  Ui study.txt  v1.txt
public/: deployment.json  index.html
scripts/: deploy-constellation.js  deploy-frontend.js  deploy-mock-tokens.js  deploy-optimized.js  deploy.js  generate-abi.js  quick-start.js  quick-test.js  run-integration-tests.sh  security-analysis.js  simple-deploy.js  simple-test.js  test-bridge-apis.js  test-contract-connection.js  test-integration.js
src/: App.css  App.tsx  index.css
(+87 files in other folders)
